sec 4: copy edits

--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Tue, 03 Dec 2013.
+%% Created using Papers on Sun, 05 Jan 2014.
 %% http://papersapp.com/papers/
 
 @book{Altenkirch:2003kz,
@@ -2717,6 +2717,36 @@ title = {{Ott: effective tool support for the working semanticist}},
 booktitle = {ICFP '07: The 12th ACM SIGPLAN international conference on Functional programming},
 year = {2007},
 publisher = { ACM  Request Permissions},
+month = oct
+}
+
+@incollection{Henglein:2013dd,
+author = {Henglein, Fritz and Hinze, Ralf},
+title = {{Sorting and Searching by Distribution: From Generic Discrimination to Generic Tries}},
+year = {2013},
+pages = {315--332},
+publisher = {Springer International Publishing},
+month = dec
+}
+
+@inproceedings{Cheney:2013id,
+author = {Cheney, James and Lindley, Sam and Wadler, Philip},
+title = {{A practical theory of language-integrated query}},
+booktitle = {ICFP '13: The 18th ACM SIGPLAN international conference on Functional programming},
+year = {2013},
+pages = {403--416},
+publisher = {ACM},
+address = {New York, New York, USA},
+month = nov
+}
+
+@article{Schwartz:1980cy,
+author = {Schwartz, Jacob T},
+title = {{Ultracomputers}},
+journal = {Transactions on Programming Languages and Systems (TOPLAS},
+year = {1980},
+volume = {2},
+number = {4},
 month = oct
 }
 
